# murmur

./: .gitignore  AGENTS.md  Cargo.toml  README.md  permissions.toml.default
crates/fugue-core/: Cargo.toml
crates/murmur/: Cargo.toml
crates/murmur-core/: Cargo.toml
crates/murmur-core/src/: agent.rs  config.rs  issue.rs  lib.rs  orchestration.rs  paths.rs  permissions.rs  project.rs  stream.rs  usage.rs
crates/murmur-core/src/stream/: claude.rs  codex.rs
crates/murmur/src/: client.rs  config_store.rs  dedup_store.rs  git.rs  github.rs  hooks.rs  issues.rs  lib.rs  linear.rs  llm_auth.rs  main.rs  permissions.rs  providers.rs  runtime_store.rs  stats.rs  worktrees.rs
crates/murmur/src/daemon/: claude.rs  comment_poller.rs  host_manager.rs  issue_backend.rs  mod.rs  orchestration.rs  prompts.rs  proto.rs  server.rs  state.rs  webhook.rs
crates/murmur/src/daemon/rpc/: agent.rs  claim.rs  commit.rs  director.rs  issue.rs  manager.rs  mod.rs  orchestration.rs  permission.rs  ping.rs  plan.rs  project.rs  question.rs  stats.rs
crates/murmur/src/host/: manager.rs  mod.rs  server.rs
crates/murmur/src/tui/: chat.rs  client.rs  core.rs  daemon_client.rs  editor.rs  markdown.rs  mod.rs  runtime.rs  view.rs
crates/murmur/tests/: agents.rs  branch_cleanup.rs  cli_completion.rs  cli_help.rs  cli_surface_agent_plan_manager.rs  cli_surface_issue.rs  completion_pipeline.rs  fugue_dir_flag.rs  github_backend.rs  ipc.rs  issue_backend_selection.rs  issues_tk.rs  linear_backend.rs  logging.rs  logging_fallback.rs  merge_strategy_pull_request.rs  orchestration.rs  permissions_and_hooks.rs  permissions_llm.rs  plans_and_manager.rs  project_start_stop.rs  projects.rs  server_start_flags.rs  webhooks.rs
docs/: ARCHITECTURE.md  CLI.md  DEVELOPMENT.md  GETTING_STARTED.md  README.md  SPRINTS.md  TICKETS.md  TUI.md  USAGE.md
scripts/: smoke.sh
(+93 files in other folders)
