[package]
name = "murmur-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
