[package]
name = "murmur"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mm"
path = "src/main.rs"

[[bin]]
name = "murmur-host"
path = "src/bin/murmur_host.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
lru = "0.12"
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "query"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
crossterm = "0.27"
directories = "5"
fs2 = "0.4"
murmur-core = { path = "../murmur-core" }
murmur-protocol = { path = "../murmur-protocol" }
getrandom = "0.2"
hex = "0.4"
hmac = "0.12"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
which = "7"

[dev-dependencies]
assert_cmd = "2"
nix = { version = "0.28", default-features = false, features = ["process", "signal"] }
predicates = "3"
tempfile = "3"
wiremock = "0.6"

[lints.rust]
unsafe_code = "forbid"
